--- a/更新日志.md
+++ b/更新日志.md
@@ -1,8 +1,7 @@
 ## 2017.4.18
 
-- mkdir [01JavaSE](/01-JavaSE)
-	- 00章 [JDK下载-安装-配置](/01-JavaSE/00章%20JDK下载-安装-配置)
+- 01章-[JavaSE](/01章-JavaSE)
+	- 01节-[JDK下载-安装-配置](/01章-JavaSE/01节-JDK下载-安装-配置)
 		- HelloWorld.java
-		- ReadMe.md
-	- 01章 [Java基础语法](/01-JavaSE/01章%20Java基础语法)
-
+		- README.md
+	- 02节-[Java基础语法](/01章-JavaSE/02节-Java基础语法)
