--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,21 @@
+## 2017.4.19
+
+- [README.md](/README.md) (JavaSE链接修护)
+
+- 01章-[JavaSE](/01章-JavaSE)
+	- 01节-[JDK下载-安装-配置](/01章-JavaSE/01节-JDK下载-安装-配置)
+		- README.md (更改部分格式)
+	- 02节-[Java基础语法](/01章-JavaSE/02节-Java基础语法)
+		- README.md
+		- Logical.java
+		- Test.java
+		- TestBreak.java
+		- TestContinue.java
+		- TestConvert.java
+		- TestSwitch.java
+
+---
+
 ## 2017.4.18
 
 - 01章-[JavaSE](/01章-JavaSE)
@@ -5,3 +23,4 @@
 		- HelloWorld.java
 		- README.md
 	- 02节-[Java基础语法](/01章-JavaSE/02节-Java基础语法)
+		- README.md
