重编码文件,修护全路径链接

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,18 +1,21 @@
 ## 2017.4.19
 
+- UTF-8编码 保存 java源文件 (解决中文注释乱码)
 - [README.md](/README.md) (JavaSE链接修护)
 
 - 01章-[JavaSE](/01章-JavaSE)
 	- 01节-[JDK下载-安装-配置](/01章-JavaSE/01节-JDK下载-安装-配置)
 		- README.md (更改部分格式)
 	- 02节-[Java基础语法](/01章-JavaSE/02节-Java基础语法)
-		- README.md
 		- Logical.java
+		- README.md (修护链接全路径)
 		- Test.java
 		- TestBreak.java
 		- TestContinue.java
 		- TestConvert.java
 		- TestSwitch.java
+	- 03节-[Java面向对象](/01章-JavaSE/03节-Java面向对象)
+		- README.md
 
 ---
 
