--- a/更新日志.md
+++ b/更新日志.md
@@ -10,6 +10,11 @@
   - 02节-[Java基础语法](/01章-JavaSE/02节-Java基础语法)
     - README.md (调整版式,图片链接移至本地)
 
+- 02章-[JavaWeb](/02章-JavaWeb)
+
+- 03章-[JavaEE](/03章-JavaEE)
+  - 01节-[Struts框架技术](/03章-JavaEE/01节-Struts框架技术)
+    -README.md
 
 ## 2017.4.19
 
