--- a/更新日志.md
+++ b/更新日志.md
@@ -11,10 +11,12 @@
     - README.md (调整版式,图片链接移至本地)
 
 - 02章-[JavaWeb](/02章-JavaWeb)
+  - 01节-[Html](/02章-JavaWeb/01节-Html)
+    - README.md
 
 - 03章-[JavaEE](/03章-JavaEE)
   - 01节-[Struts框架技术](/03章-JavaEE/01节-Struts框架技术)
-    -README.md
+    - README.md
 
 ## 2017.4.19
 
