--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,19 @@
+## 2017.4.24
+
+- 03章-[JavaEE](/03章-JavaEE)
+  - 01节-[Struts框架技术](/03章-JavaEE/01节-Struts框架技术)
+    - [src](/03章-JavaEE/01节-Struts框架技术/src)
+      - HelloAction.java
+      - struts.xml
+    - README.md
+    - [WebRoot](/03章-JavaEE/01节-Struts框架技术/WebRoot)
+      - index.jsp
+      - success.jsp
+      - [WEB-INF](/03章-JavaEE/01节-Struts框架技术/WebRoot/WEB-INF)
+        - [lib](/03章-JavaEE/01节-Struts框架技术/WebRoot/WEB-INF/lib)
+	  - 所需要的 jar包
+	- web.xml (配置struts的 filter 过滤器)
+
 ## 2017.4.23
 
 ### 分类 源代码(src) 和 图片(images) 文件夹
