--- a/更新日志.md
+++ b/更新日志.md
@@ -1,17 +1,16 @@
 ## 2017.4.24
 
 - 03章-[JavaEE](/03章-JavaEE)
-  - 01节-[Struts框架技术](/03章-JavaEE/01节-Struts框架技术)
-    - [src](/03章-JavaEE/01节-Struts框架技术/src)
+  - 01节-[Struts2框架技术](/03章-JavaEE/01节-Struts2框架技术)
+    - [src](/03章-JavaEE/01节-Struts2框架技术/src)
       - HelloAction.java
       - struts.xml
     - README.md
-    - [WebRoot](/03章-JavaEE/01节-Struts框架技术/WebRoot)
+    - [WebRoot](/03章-JavaEE/01节-Struts2框架技术/WebRoot)
       - index.jsp
       - success.jsp
-      - [WEB-INF](/03章-JavaEE/01节-Struts框架技术/WebRoot/WEB-INF)
-        - [lib](/03章-JavaEE/01节-Struts框架技术/WebRoot/WEB-INF/lib)
-	  - 所需要的 jar包
+      - [WEB-INF](/03章-JavaEE/01节-Struts2框架技术/WebRoot/WEB-INF)
+        - [lib](/03章-JavaEE/01节-Struts2框架技术/WebRoot/WEB-INF/lib) (所需要的 jar包)
 	- web.xml (配置struts的 filter 过滤器)
 
 ## 2017.4.23
