--- a/更新日志.md
+++ b/更新日志.md
@@ -1,3 +1,8 @@
+## 2017.5.2
+- 02章-[JavaWeb](/02章-JavaWeb)
+  - 01节-[html](/02章-JavaWeb/01节-html)
+    - README.md
+
 ## 2017.4.24
 
 - 03章-[JavaEE](/03章-JavaEE)
